--- a/evaluation/eval_configs.json
+++ b/evaluation/eval_configs.json
@@ -3,21 +3,31 @@
     "key": "prompt-comparison",
     "provider": "ollama",
     "base_url": "http://localhost:11434",
-    "models": ["qwen3-coder:30b"],
+    "models": ["qwen2.5-coder:14b"],
     "prompts": ["optimized"],
-    "runs": 1
+    "runs": 3
   },
   {
     "key": "model-comparison",
     "provider": "ollama",
     "base_url": "http://localhost:11434",
     "models": [
-      "qwen2.5-coder:7b",
       "qwen2.5-coder:14b",
-      "codellama:13b",
+      "qwen2.5-coder:7b",
       "llama3.1:8b",
-      "qwen3:8b",
-      "qwen3:14b"
+      "qwen3:8b"
+    ],
+    "prompts": ["optimized"],
+    "runs": 3
+  },
+  {
+    "key": "small-model-comparison",
+    "provider": "ollama",
+    "base_url": "http://localhost:11434",
+    "models": [
+      "qwen2.5-coder:7b",
+      "llama3.1:8b",
+      "qwen3:8b"
     ],
     "prompts": ["optimized"],
     "runs": 3
